2012-11-06	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Fix bug #3581649 by stopping Actor::ready_best_shield from trying to equip
	  the lhand object (weapon).

2012-11-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: Prevent schedules from being executed for off-screen actors.

2012-11-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin/ibuf8.cc: Fix out of bounds memory access in 'static' screens

2012-10-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/ucdisasm.cc: Eliminated warning.
	* shapes/shapeinf.h: Typo in comment.
	* All others: Added 2xBR, 3xBR and 4xBR scalers to Exult. They are considered
	  experimental, and require --enable-nxbr to be passed to ./configure to use.
	  Performance is likely atrocious for the time being.

2012-10-27 Dominik Reichardt <dominus@users.sourceforge.net>
	* gumps/Slider_gump.cc: fixed bug #2801339, clicks outside of the slider gump 
	  but on the x-axis of the slider were registered as clicks on the slider.
	* exult.cc: when scale_method in exult.cfg wasn't a valid scaler Exult would crash.
	  Thanks to sh4rm4 on #exult for this fix.
	* exult.cc, gamewin.*, gumps/GameplayOptions_gump.cc: added single rightclick 
	  pathfind option. Default is still a double rightclick. Thanks to wjp for 
	  debugging this.

2012-10-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: Fix hang when swapping positions on chunk boundary
	* files/zip/*: Fix build with recent zlib

2012-10-10 Dominik Reichardt <dominus@users.sourceforge.net>
	* objs/egg.cc: fixed bug #3433026, in a fire field only clear asleep flag 
	  when the NPC is actually sleeping. Otherwise we get a cloned passive 
	  standing NPC. This is due to Usecode_script::terminate(this); in actors.cc
	  which might need further looking into.
	  
2012-09-07	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Revert previous change and implement it another way
